# DataTrek

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.spark  README.md  docker-compose.yml  pyproject.toml
DataTrek/: .gitignore  pyproject.toml
DataTrek/ingestion/: upload_raw_location_data.py
airflow/dags/: country_state_city_dag.py  default_args_dag.py  default_spark_conf.py
airflow/scripts/: airflow-entrypoint.sh
ingestion/: news_api_config.py  news_ingestor.py  upload_population_data.py  upload_raw_location_data.py  upload_raw_location_data_s3.py
ingestion/.dlt/: config.toml
transformation/: main.py
transformation/python/: country_state_city.py
transformation/spark/jobs/: convert_country_state_city_json_to_parquet.py  convert_json_to_parquet_job.py  country_state_city_transform_job.py
transformation/spark/python/: catalog_config.py  convert_json_to_parquet.py  country_state_city.py  country_state_city_transform.py  write_to_catalog.py
transformation/utils/: datasets.py
utils/: country_codes.py  news_topics.py  parse_country_codes.py  s3_manager.py  upload_to_s3.py
