[tool.poetry]
name = "datatrek"
version = "0.1.0"
description = "A data pipeline for travel-related data ingestion and processing"
authors = ["Deji Emiabata"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyspark = "^3.5.2"
google-cloud-storage = "^2.18.2"
python-dotenv = "^1.0.1"
apache-airflow = "^2.10.0"
apache-airflow-providers-apache-spark = "^4.10.0"
boto3 = "^1.35.10"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
dlt = {extras = ["parquet"], version = "^1.5.0"}
s3fs = "^2024.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"


[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

indent-style = "space"